Fix text color for h1 and paragraph elements for better visibility

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,6 +4,7 @@ body {
 
 h1 {
     font-family: 'Times New Roman', Times, serif;
+    color: black;
     font-size: 30px;
     font-weight: bolder;
     margin: 20px;
@@ -12,6 +13,7 @@ h1 {
 p {
     font-family: 'Times New Roman', Times, serif;
     margin: 20; 
+    color: black;
 }
 
 ul.nav_bar{
